# llm_from_scratch

./: .gitignore  README.md  docker-compose.yml  dockerfile  env_dist  pyproject.toml  readme.md  requirements.txt
inference/: __main__.py  app.py  load_model.py
trainer/: __main__.py  config.yaml  load_data.py  model.py  train.py
