[project]
name = "LLM-from-scratch"
version = "0.0.1"
requires-python = ">= 3.11"
maintainers = [
  {name = "Kirill Erokhin", email = "ks.erokhin@gmail.com"}
]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.black]
line-length = 100
target-version = ["py311"]
skip-string-normalization = true

[tool.ruff]
line-length = 100

[project.urls]
Repository = "https://github.com/me/spam.git"
HuggingFace = "https://huggingface.co/Kasdeja23/GPT2WaP"